--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
-        "spatie/laravel-translatable": "^6.11"
+        "spatie/laravel-translatable": "^6.11",
+        "stripe/stripe-php": "^17.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
