--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "giggsey/libphonenumber-for-php": "^9.0",
         "kreait/firebase-php": "^7.18",
         "laravel-lang/publisher": "^16.6",
         "laravel/framework": "^12.0",
