--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "propaganistas/laravel-phone": "^6.0",
         "spatie/laravel-translatable": "^6.11",
         "stripe/stripe-php": "^17.1"
     },
