--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "barryvdh/laravel-dompdf": "*",
+        "mpdf/mpdf": "^8.2",
         "giggsey/libphonenumber-for-php": "^9.0",
         "kreait/firebase-php": "^7.18",
         "laravel-lang/publisher": "^16.6",
